fixed issue with alignment of contact section

--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,13 @@
 header {
         background-color: #d5cbe3;
     }
-h1 {
+h1 { 
+        font-family:'Haettenschweiler', 'Arial Narrow Bold', sans-serif;
         display: inline-block;
         color: #3d3742;}
 h2 {
- font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+ font-family:'Haettenschweiler', 'Arial Narrow Bold', sans-serif;
  letter-spacing: 2px;
- text-transform: uppercase;
  font-size: 24px;
  text-align: center;
  align: center;
@@ -19,6 +19,7 @@ h2 {
 h3{
     line-height: 2px;
     font-size: 24px;
+    letter-spacing: 2px;
 }
 
 h4{
@@ -80,7 +81,7 @@ ul li {
     padding-right:10px;
     height: 100px;
     margin-top: 0px;
-    min-width: 20%;
+    min-width: 25%;
     text-align: center;
 }
 
@@ -146,7 +147,7 @@ border-top: 2px solid #3d3742;}
     position: relative;
     padding-right:10px;
     max-height: 50px;
-    min-width: 20%;
+    min-width: 25%;
     z-index: 5;
 }
 
@@ -224,6 +225,11 @@ img {
     padding-top: 1px;
     margin-top: 10px solid white;
     z-index: 4;
+}
+
+.contact-content {
+    text-align: center;
+    align-items: center;
 }
 
 @media screen and (max-width: 600px) {
